# openvslam

./: .gitignore  CMakeLists.txt  Dockerfile.desktop  build_docker.sh  build_slam.sh  enter_docker.sh  run_kitti.sh  start_server.sh
models/: create_model.py  test_model.py
ros/src/openvslam/: CMakeLists.txt
ros/src/publisher/: CMakeLists.txt
src/openvslam/: CMakeLists.txt  tracking_module.cc  tracking_module.h
src/openvslam/pytorch/: CMakeLists.txt  model.cc  model.h  utils.cc  utils.h
src/openvslam/segment/: CMakeLists.txt  base_model.cc  base_model.h  create_model.py  deeplab.cc  deeplab.h  mask_rcnn.cc  mask_rcnn.h  segmenter.cc  segmenter.h
test/openvslam/segment/: segmenter.cc
